<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SecretKey</string>
    <string name="MAINusuario">Usuario</string>
    <string name="MAINcontraseniamaestra">Contraseña maestra</string>
    <string name="MAINacceder">ACCEDER</string>
    <string name="MAINcrearcuenta">Crear cuenta</string>
    <string name="MAINlogacceso">MAIN: acceso del usuario en la aplicación</string>
    <string name="MAINlogcontraseniaincorrecta">MAIN: contraseña incorrecta</string>
    <string name="MAINlognoexisteusuario">MAIN: el usuario no existe</string>
    <string name="infoApp">SecretKey permite almacenar todas tus contraseñas de forma segura, almacenandolas cifradas lejos de miradas ajenas. Con una sola contraseña podras guardar y consultar todas tus contraseñas. \n\nPero, recuerda, sin tu contraseña maestra no podrás acceder ni recuperar ninguna de ellas\n\n secretKey no utilizara ningún dato de los introducidos en la aplicación</string>
    <string name="CIFRADOerror">Error de cifrado</string>
    <string name="REGISTERusuario">Usuario</string>
    <string name="REGISTERcontraseniamaestra">Contraseña maestra</string>
    <string name="REGISTERcontraseniamaestra2">Repite contraseña maestra</string>
    <string name="REGISTERcreate">CREAR CUENTA</string>
    <string name="REGISTERLOGregistrousuario">REGISTER: registro del usuario en aplicacion</string>
    <string name="REGISTERlogcontrasenianocoincide">REGISTER: las contraseñas no coinciden</string>
    <string name="REGISTERlogusuarioexiste">REGISTER: el usuario ya existe</string>
    <string name="REGISTERlognousuario">REGISTER: indíque un usuario</string>
    <string name="PANELadd">AÑADIR SERVICIO</string>
    <string name="PANELsearch">CONSULTAR SERVICIO</string>
    <string name="PANELmodify">MODIFICAR SERVICIO</string>
    <string name="PANELdelete">ELIMINAR SERVICIO</string>
    <string name="PANELbackup">COPIA SEGURIDAD</string>
    <string name="PANELchangemk">CAMBIAR MASTER KEY</string>
    <string name="PANELlastlogin">Último acceso: </string>
    <string name="PANELnodata">Todavía no hay contraseñas guardadas</string>
    <string name="GENERATEusegenerate">USAR CONTRASEÑA SUGERIDA</string>
    <string name="GENERATEuseown">YA TENGO UNA CONTRASEÑA</string>
    <string name="GENERATEpopupexito">¡Contraseña copiada al portapapeles!</string>
    <string name="GENERATElog">GENERATE: contraseña copiada al portapapeles</string>
    <string name="SAVEservicio">Servicio</string>
    <string name="SAVEemail">Email / usuario</string>
    <string name="SAVEpassword">Contraseña</string>
    <string name="SAVEguardar">GUARDAR</string>
    <string name="SAVElog">SAVE: añadido el servicio</string>
    <string name="SAVEpopup">¡Contraseña guardada!</string>
    <string name="SAVElog1">SAVE: el servicio ya existe</string>
    <string name="SAVElog2">SAVE: introduce un email/usuario valido</string>
    <string name="SAVElog3">SAVE: servicio no valido</string>
    <string name="SAVElog4">SAVE: introduce una contraseña valida</string>
    <string name="SEARCHemail">Email / usuario</string>
    <string name="SEARCHpassword">Contraseña</string>
    <string name="SEARCHfechamodificacion">Fecha de modificacion</string>
    <string name="SEARCHpopup">¡Contraseña copiada al portapapeles!</string>
    <string name="SEARCHlog">SEARCH: consultada contraseña del servicio</string>
    <string name="SEARCHlog1">SEARCH: contraseña copiada al portapapeles</string>
    <string name="MODIFYemail">Email / usuario</string>
    <string name="MODIFYpassword">Contraseña</string>
    <string name="MODIFYboton">MODIFICAR</string>
    <string name="MODIFYpopup">¡Datos modificados!</string>
    <string name="MODIFYlog">MODIFY: modificado el servicio</string>
    <string name="MODIFYlog1">MODIFY: formato de contraseña no valido</string>
    <string name="MODIFYlog2">MODIFY: introduce un email/usuario valido</string>
    <string name="DELETEboton">ELIMINAR</string>
    <string name="DELETElog">DELETE: eliminado servicio</string>
    <string name="DELETEpopup">¡Servicio eliminado!</string>
    <string name="MASTERKEYcontraseniamaestra">Contraseña maestra</string>
    <string name="MASTERKEYcontraseniamaestra2">Repite contraseña maestra</string>
    <string name="MASTERKEYboton">CAMBIAR</string>
    <string name="MASTERKEYlog">MASTER KEY: se modifica la contraseña maestra</string>
    <string name="MASTERKEYlog2">MASTER KEY: las contraseñas no coinciden</string>
    <string name="MASTERKEYpopup">¡Contraseña maestra cambiada con exito!</string>
    <string name="BACKUPboton">CREAR COPIA</string>
    <string name="BACKUPboton2">RESTAURAR COPIA</string>
    <string name="BACKUPcopia">Tu copia aparecera en tu carpeta &quot;Descargas&quot; con nombre &quot;secretKey.db&quot;</string>
    <string name="BACKUPrestaura">¡Al hacer este paso sobreescribiras la base de datos actual!\n\nAsegurate de tener el fichero &quot;secretKey.db&quot; en la carpeta &quot;Descargas&quot; para poder restaurarlo</string>
    <string name="BACKUPrestaura2">¡Tras restaurar la base de datos la app de cerrara!</string>
    <string name="BACKUPlogAPI">BACKUP: el movil no dispone de la API necesaria</string>
    <string name="BACKUPpopup">¡Base de datos copiada!</string>
    <string name="BACKUPpopup2">¡Base de datos restaurada!</string>
    <string name="BACKUPlog">BACKUP: copiada la base de datos en Download</string>
    <string name="BACKUPlog2">BACKUP: no existe secretKey.db en la carpeta Download</string>
    <string name="CTXbad">¡La contraseña indicada es insegura!\n\nDebe contener al menos:</string>
    <string name="CTXbad2">12 caracteres\n\nUna mayúscula\n\nUna minúscula\n\nUn número\n\nUn símbolo</string>
    <string name="TYPE1">Red social</string>
    <string name="TYPE2">Compras</string>
    <string name="TYPE3">Educacion</string>
    <string name="TYPE4">Email</string>
    <string name="TYPE5">Bancos</string>
    <string name="TYPE6">Otros</string>
    <string name="MEDIUM">MEDIA</string>
    <string name="HIGHT">ALTA</string>
    <string name="LOW">BAJA</string>
    <string name="FILEerror">Error de fichero</string>

</resources>