<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:screenOrientation="portrait"
    tools:context=".PanelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infoUltimoAcceso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="Último acceso"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelMaster" />

            <ImageView
                android:id="@+id/panelLogo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/wordtop" />

            <Button
                android:id="@+id/panelMaster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELchangemk"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelBackup" />

            <Button
                android:id="@+id/panelBackup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/create_backup"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELbackup"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelEliminar" />

            <Button
                android:id="@+id/panelEliminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/eliminar"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELdelete"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelModificar" />

            <Button
                android:id="@+id/panelModificar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/editar"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELmodify"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelBuscar" />

            <Button
                android:id="@+id/panelGenerar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/passwdnew"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELadd"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelLogo" />

            <Button
                android:id="@+id/panelBuscar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableLeft="@drawable/buscar"
                android:drawablePadding="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/PANELsearch"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panelGenerar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>